--- a/Portaria01/Portaria01/Portaria01.csproj
+++ b/Portaria01/Portaria01/Portaria01.csproj
@@ -141,6 +141,12 @@
     <Compile Include="FormPessoa.Designer.cs">
       <DependentUpon>FormPessoa.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormUtil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUtil.Designer.cs">
+      <DependentUpon>FormUtil.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormControleVeiculo.resx">
@@ -166,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPessoa.resx">
       <DependentUpon>FormPessoa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUtil.resx">
+      <DependentUpon>FormUtil.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
